--- a/src/app/cadastro/cadastro.component.html
+++ b/src/app/cadastro/cadastro.component.html
@@ -45,7 +45,7 @@
                     </div>
 
                     <div class="mt-5 d-flex justify-content-center">
-                        <button type="submit" class="btn btn-light mr-4">Cancelar</button>
+                        <button type="submit" class="btn btn-light mr-4" routerLink="/login">Cancelar</button>
                         <button type="submit" class="btn btn-outline-info ml-4">Cadastrar</button>
                     </div>
 
