--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -24,7 +24,7 @@
                     <hr class="mb-4 mt-4">
 
                     <p class="text-center">
-                        Não tem uma conta? <a href="">Cadastre-se</a>
+                        Não tem uma conta? <a routerLink="/cadastro">Cadastre-se</a>
                     </p>
                 </div>
             </div>
