--- a/src/app/cadastro/cadastro.component.html
+++ b/src/app/cadastro/cadastro.component.html
@@ -11,33 +11,33 @@
 
                     <div class="form-group">
                         <label for="nome"></label>
-                        <input class="form-control" type="text" name="nome" id="nome" placeholder="Nome">
+                        <input [(ngModel)]='user.nome' class="form-control" type="text" name="nome" id="nome" placeholder="Nome">
                     </div>
 
                     <div class="form-group">
                         <label for="usuario"></label>
-                        <input class="form-control" type="usuario" name="usuario" id="usuario" placeholder="Usuário">
+                        <input [(ngModel)]='user.usuario' class="form-control" type="usuario" name="usuario" id="usuario" placeholder="Usuário">
                     </div>
 
                     <div class="form-group">
                         <label for="foto"></label>
-                        <input class="form-control" type="foto" name="foto" id="foto" placeholder="Link da foto">
+                        <input [(ngModel)]='user.foto' class="form-control" type="foto" name="foto" id="foto" placeholder="Link da foto">
                     </div>
 
                     <div class="form-group">
                         <label for="senha"></label>
-                        <input class="form-control" type="password" name="senha" id="senha" placeholder="Senha">
+                        <input (input)='confirmSenha($event)' class="form-control" type="password" name="senha" id="senha" placeholder="Senha">
                     </div>
 
                     <div class="form-group">
                         <label for="confirmarSenha"></label>
-                        <input class="form-control" type="password" name="confirmarSenha" id="confirmarSenha"
+                        <input [(ngModel)]='user.senha' class="form-control" type="password" name="confirmarSenha" id="confirmarSenha"
                             placeholder="Confirmar senha">
                     </div>
 
                     <div class="form-group">
                         <label for="tipoUsuario"></label>
-                        <select class="form-control" name="tipo" id="tipo">
+                        <select class="form-control" name="tipo" id="tipo" (change)='tipoUser($event)' >
                             <option>Tipo de usuário:</option>
                             <option value="normal">Normal</option>
                             <option value="adm">Administrador</option>
@@ -46,7 +46,7 @@
 
                     <div class="mt-5 d-flex justify-content-center">
                         <button type="submit" class="btn btn-light mr-4" routerLink="/login">Cancelar</button>
-                        <button type="submit" class="btn btn-outline-info ml-4">Cadastrar</button>
+                        <button type="submit" class="btn btn-outline-info ml-4" (click)='cadastrar()' >Cadastrar</button>
                     </div>
 
                 </div>
