--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -9,16 +9,16 @@
 
                     <div class="form-group">
                         <label for="Usuário"></label>
-                        <input class="form-control" type="text" name="usuario" id="usuario" placeholder="Usuário">
+                        <input [(ngModel)]='userLogin.usuario' class="form-control" type="text" name="usuario" id="usuario" placeholder="Usuário">
                     </div>
 
                     <div class="form-group">
                         <label for="Senha"></label>
-                        <input class="form-control" type="password" name="Senha" id="Senha" placeholder="Senha">
+                        <input [(ngModel)]='userLogin.senha' class="form-control" type="password" name="Senha" id="Senha" placeholder="Senha">
                     </div>
 
                     <div class="mt-4 d-flex justify-content-center">
-                        <button type="submit" class="btn btn-outline-info">Entrar</button>
+                        <button type="submit" class="btn btn-outline-info" (click)='entrar()'>Entrar</button>
                     </div>
 
                     <hr class="mb-4 mt-4">
