--- a/src/app/tema/tema.component.html
+++ b/src/app/tema/tema.component.html
@@ -10,15 +10,12 @@
             <h1 class="fs-54 text-center">Temas</h1>
             <h5 class="fs-18 text-center">Veja aqui todos os temas cadastrados ou cadastre um novo:</h5>
 
-            <div class="row d-flex justify-content-center mt-4 mb-5">
-                <div class="col-md-3">
+            <div class="row d-flex justify-content-center mt-5 mb-5">
+                <div class="col-md-4">
 
-                    <div class="form-group">
-                        <input [(ngModel)]='tema.descricao' type="text" class="form-control" id="descricao" placeholder="Informe a descrição do tema">
-                    </div>
-
-                    <div class="d-flex justify-content-center">
-                        <button class="btn btn-light" (click)='cadastrar()'>Cadastrar</button>
+                    <div class="form-group d-flex">
+                        <input [(ngModel)]='tema.descricao' type="text" class="form-control" id="descricao" placeholder="Novo tema">
+                        <button class="btn btn-outline-light ml-3" (click)='cadastrar()'>Cadastrar</button>
                     </div>
 
                 </div>
@@ -54,8 +51,8 @@
                     <th>{{item.id}}</th>
                     <td>{{item.descricao}}</td>
                     <td class="d-flex justify-content-end">
-                      <button class="btn btn-info mr-3">Editar</button>
-                      <button class="btn btn-outline-light">Apagar</button>
+                      <button class="btn btn-info mr-4" [routerLink]="['/tema-edit', item.id]" >Editar</button>
+                      <button class="btn btn-outline-info" [routerLink]="['/tema-delete', item.id]" >Apagar</button>
                     </td>
                   </tr>
                 </tbody>
