Implementação de melhorias

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -33,7 +33,7 @@
     </div>
 
     <div class="footer-copyright text-center py-2" style="background-color: #2D7096;">
-        <span class="text-light">© 2021 Copyright: Dafhne Novais</span>
+        <span class="text-light">© 2021 Copyright: Desenvolved By Dafhne Novais</span>
     </div>
 
 </footer>
