--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -24,7 +24,7 @@
 
         <ul class="navbar-nav ml-auto d-flex align-items-center">
             <li class="nav-item pl-3">
-                <a (click)='sair()' class="m-0 font-weight-bold text-white fs-16">Sair <i class="fas fa-sign-out-alt icon" aria-hidden="true"></i></a>                
+                <a (click)='sair()' class="m-0 font-weight-bold fs-16 icon">Sair <i class="fas fa-sign-out-alt" aria-hidden="true"></i></a>                
             </li>
         </ul>
     </div>
