--- a/src/app/tema/tema.component.html
+++ b/src/app/tema/tema.component.html
@@ -1,4 +1,4 @@
-<div class="contaicer-fluid">
+<div class="container-fluid">
 
     <div class="row bg-info">
         <div class="col-md-12 text-white">
