--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -6,7 +6,7 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto d-flex align-items-center">
-            <li class="nav-item active">
+            <li class="nav-item active ft">
                 <img src= "{{foto}}" alt="Foto do usuário" width="50px" height="50px"
                     class="img-fluid rounded-circle">
             </li>
