Implementção do put e delete de postagens

--- a/src/app/cadastro/cadastro.component.html
+++ b/src/app/cadastro/cadastro.component.html
@@ -45,8 +45,8 @@
                     </div>
 
                     <div class="mt-5 d-flex justify-content-center">
-                        <button type="submit" class="btn btn-light mr-4" routerLink="/login">Cancelar</button>
-                        <button type="submit" class="btn btn-outline-info ml-4" (click)='cadastrar()' >Cadastrar</button>
+                        <button type="submit" class="btn btn-outline-info mr-4" routerLink="/login">Cancelar</button>
+                        <button type="submit" class="btn btn-info ml-4" (click)='cadastrar()' >Cadastrar</button>
                     </div>
 
                 </div>
