--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -18,7 +18,7 @@
                     </div>
 
                     <div class="mt-4 d-flex justify-content-center">
-                        <button type="submit" class="btn btn-outline-info" (click)='entrar()'>Entrar</button>
+                        <button type="submit" class="btn btn-info" (click)='entrar()'>Entrar</button>
                     </div>
 
                     <hr class="mb-4 mt-4">
