--- a/src/app/alertas/alertas.component.html
+++ b/src/app/alertas/alertas.component.html
@@ -1,11 +1,4 @@
-<div class="alert alert-success alert-dismissible fade show text-center m-0 pr-3 pl-3" role="alert"><i class="fas fa-check mr-2"></i>
-    {{message}}
-    <!-- <button type="button" class="close" data-dismiss="alert" aria-label="Close" (click)='onClose()'>
-      <span aria-hidden="true">&times;</span>
-    </button> -->
-  </div>
-
-  <div class="alert alert-warning alert-dismissible fade show text-center m-0 pr-3 pl-3" role="alert"><i class="fas fa-exclamation mr-2"></i>
+<div class="alert alert-{{type}} alert-dismissible fade show text-center m-0 pr-3 pl-3" role="alert"><i></i>
     {{message}}
     <!-- <button type="button" class="close" data-dismiss="alert" aria-label="Close" (click)='onClose()'>
       <span aria-hidden="true">&times;</span>
