melhoria no placeholder

--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -55,7 +55,7 @@
             <div class="row d-flex justify-content-center mt-5 mb-5">
                 <div class="col-md-4">
                     <div class="form-group d-flex">
-                        <input type="text" class="form-control" id="titulo" placeholder="Título" [(ngModel)]='tituloPost' (keyup)='findByTituloPostagem()'><i class="fas fa-search m-2 pt-1"></i>
+                        <input type="text" class="form-control" id="titulo" placeholder="Título da Postagem" [(ngModel)]='tituloPost' (keyup)='findByTituloPostagem()'><i class="fas fa-search m-2 pt-1"></i>
                     </div>
                 </div>
             </div>
@@ -130,7 +130,7 @@
             <div class="row d-flex justify-content-center mt-5 mb-5">
                 <div class="col-md-4">
                     <div class="form-group d-flex">
-                        <input type="text" class="form-control" id="titulo" placeholder="Tema" [(ngModel)]='nomeTema' (keyup)='findByNomeTema()'><i class="fas fa-search m-2 pt-1"></i>
+                        <input type="text" class="form-control" id="titulo" placeholder="Tema da Postagem" [(ngModel)]='nomeTema' (keyup)='findByNomeTema()'><i class="fas fa-search m-2 pt-1"></i>
                     </div>
                 </div>
             </div>
